--- a/templates/container_bar_pie_rent.html
+++ b/templates/container_bar_pie_rent.html
@@ -3,7 +3,7 @@
   <div class="card">
     <div class="card-body text-center">
       <div class="card-header">
-      <h4>{{ "{:,}".format(data[2][0][0]|int)}} zł/m2 </h4>
+      <h4>{{ "{:,}".format(data[2][0][0]|int)}} zł </h4>
       <p> Średnia cena wynajmu bez czynszu</p>
       </div>
       {% include 'bar_avg_price.html'%}
