--- a/templates/index.html
+++ b/templates/index.html
@@ -65,12 +65,16 @@
     {% if data[2][0]|length == 3 %}
       {% if data[1]|length > 0 %}
     {% include 'container_bar_pie_sell.html'  %}
+      {% else %}
+       {% include 'no_records.html'  %}
       {% endif %}
     {% include 'table.html'  %}
 
       {% else %}
 {% if data[1]|length > 0 %}
     {% include 'container_bar_pie_rent.html'  %}
+       {% else %}
+       {% include 'no_records.html'  %}
       {% endif %}
       {% include 'table_rent.html' %}
       {% endif %}
