--- a/templates/container_bar_pie_sell.html
+++ b/templates/container_bar_pie_sell.html
@@ -1,21 +1,37 @@
 <div class="card-group mt-5 text-primary">
+
+<!-- Checking if any records are fetched otherwise return no record page -->
+{% if data[1]|length > 0 %}
+
+  <!-- Card with average prices -->
   <div class="card">
     <div class="card-body text-center">
       <div class="card-header">
-      <h4>{{ "{:,}".format(data[2][0][0]|int)}} zł/m2 </h4>
-      <p> Średnia cena za metr kwadratowy</p>
+        {% if data[2][0]|length == 3 %}
+      <h4>Średnia cena za metr kwadratowy</h4>
+        {% else %}
+        <h4>Średnia cena wynajmu za metr kwadratowy</h4>
+        {% endif %}
       </div>
       {% include 'bar_avg_price.html'%}
-
     </div>
   </div>
-          <div class="card">
+
+  <!-- Card with pie chart -->
+  <div class="card">
     <div class="card-body text-center">
       <div class="card-header">
-      <h4>{{ data[2][0][2] }}</h4>
-        <p>Liczba Ogłoszeń</p>
+        <h4>Liczba Ogłoszeń</h4>
       </div>
     {% include 'pie_ads_number.html'%}
     </div>
-          </div>
-        </div>
+  </div>
+
+{% else %}
+
+  <!-- Return no record page if no records are fetched -->
+  {% include 'no_records.html'  %}
+
+{% endif %}
+  <!-- end of card group -->
+</div>
