--- a/templates/index.html
+++ b/templates/index.html
@@ -60,31 +60,17 @@
   </div>
 </div>
 
+      {% include 'main_stats.html' %}
 
+      {% include 'container_bar_pie_sell.html'  %}
 
-    {% if data[2][0]|length == 3 %}
-      {% if data[1]|length > 0 %}
-    {% include 'container_bar_pie_sell.html'  %}
-      {% else %}
-       {% include 'no_records.html'  %}
-      {% endif %}
-    {% include 'table.html'  %}
+      {% include 'table.html'  %}
 
-      {% else %}
-{% if data[1]|length > 0 %}
-    {% include 'container_bar_pie_rent.html'  %}
-       {% else %}
-       {% include 'no_records.html'  %}
-      {% endif %}
-      {% include 'table_rent.html' %}
-      {% endif %}
 
     </div>
     <div class="container mt-5 pb-5 text-primary">
     <h4>@2024</h4>
 
-    </div>
-    </div>
 
 
 
