--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,8 @@
 
   </div>
 </div>
+<!-- Checking if any records are fetched otherwise return no record page -->
+      {% if data[1]|length > 0 %}
 
       {% include 'main_stats.html' %}
 
@@ -66,6 +68,12 @@
 
       {% include 'table.html'  %}
 
+      {% else %}
+
+      <!-- Return no record page if no records are fetched -->
+      {% include 'no_records.html'  %}
+
+{% endif %}
 
     </div>
     <div class="container mt-5 pb-5 text-primary">
