krakow-house done , disabled buttons on it and a bit of estetic work done

--- a/templates/bar_avg_price.html
+++ b/templates/bar_avg_price.html
@@ -1,7 +1,11 @@
 <html>
 
 <body>
-    <div id="container" style="width:570px;"></div>
+    {% if house == True %}
+    <div class="bar-avg-price" id="container" style="width:570px; height:700px;"></div>
+    {% else %}
+    <div class="bar-avg-price" id="container" style="width:570px;"></div>
+    {% endif %}
     <script>
 
 
