--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -2020,7 +2020,8 @@ pre code {
 }
 
 .form-control:disabled, .form-control[readonly] {
-  background-color: #e9ecef;
+  background-color: #000814;
+  color: red;
   opacity: 1;
 }
 
