--- a/templates/main_stats.html
+++ b/templates/main_stats.html
@@ -1,7 +1,7 @@
 
 <div class="card-group mt-5 text-primary">
   <div class="card">
-    <div class="card-body text-center">
+    <div class="card-body text-center d-flex align-items-center justify-content-center">
       <div class="card-header">
       <h4>{{ "{:,}".format(data[2][0][0]|int)}} zł </h4>
           {% if data[2][0]|length == 3 %}
@@ -14,7 +14,7 @@
   </div>
 
     <div class="card">
-    <div class="card-body text-center">
+    <div class="card-body text-center d-flex align-items-center justify-content-center">
       <div class="card-header">
 
           {% if data[3][0] >= 0 %}
@@ -28,7 +28,7 @@
     </div>
           </div>
           <div class="card">
-    <div class="card-body text-center">
+    <div class="card-body text-center d-flex align-items-center justify-content-center">
       <div class="card-header">
           {% if data[2][0]|length == 3 %}
       <h4>{{ data[2][0][2] }}</h4>
@@ -42,7 +42,7 @@
 
 
     <div class="card">
-    <div class="card-body text-center">
+    <div class="card-body text-center d-flex align-items-center justify-content-center">
       <div class="card-header">
 
           {% if data[3][1] >= 0 %}
