--- a/templates/pie_ads_number.html
+++ b/templates/pie_ads_number.html
@@ -1,7 +1,10 @@
-<html>
 
-<body>
+
+    {% if house == True %}
+    <div id="container1" style="width:570px; margin-top: 100px;"></div>
+    {% else %}
     <div id="container1" style="width:570px;"></div>
+    {% endif %}
     <script>
 
 
@@ -72,6 +75,3 @@
 
 
     </script>
-</body>
-
-</html>
