--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
     <dotlottie-player src="https://lottie.host/7ffeb1fa-b8e9-40ba-b346-d86d24b755bc/sy9z4PL7U4.json" background="transparent" speed="1" style="width: 300px; height: 100px; float:right;" loop autoplay></dotlottie-player>
   </div>
   </header>
+
 </div>
   <div class="container">
     <div class="card" >
@@ -29,10 +30,10 @@
       {{ form.hidden_tag() }}
       <div class="row">
         <div class="col-1-25 ml-1">
-      {{ form.min_rooms(class="form-control") }}
+      {{ form.min_rooms(class="form-control", disabled=land) }}
         </div>
           <div class="col-1-25">
-      {{ form.max_rooms(class="form-control") }}
+      {{ form.max_rooms(class="form-control", disabled=land) }}
           </div>
 <div class="col-1-1">
       {{ form.min_area(class="form-control") }}
@@ -47,7 +48,7 @@
       {{ form.max_floor(class="form-control", disabled=house) }}
       </div>
         <div class="col-1-5">
-      {{ form.rent_sell(class="form-control1") }}
+      {{ form.rent_sell(class="form-control1", disabled=house) }}
           </div>
         <div class="col-1-25">
       {{ form.submit(class="btn btn-success btn-md ml-5") }}
