--- a/templates/container_bar_pie_sell.html
+++ b/templates/container_bar_pie_sell.html
@@ -1,8 +1,8 @@
 <div class="card-group mt-5 text-primary">
 
   <!-- Card with average prices -->
-  <div class="card">
-    <div class="card-body text-center">
+  <div class="card glass-morph-color">
+    <div class="card-body text-center ">
       <div class="card-header">
         {% if data[2][0]|length == 3 %}
       <h4>Średnia cena za metr kwadratowy</h4>
@@ -15,7 +15,7 @@
   </div>
 
   <!-- Card with pie chart -->
-  <div class="card">
+  <div class="card glass-morph-color">
     <div class="card-body text-center">
       <div class="card-header">
         <h4>Liczba Ogłoszeń</h4>
