--- a/templates/table.html
+++ b/templates/table.html
@@ -28,7 +28,7 @@
     <tr class="table-success">
       <th scope="row" class="text-center">{{ loop.index }}</th>
         {% if i[0] == "Krzesławickie" %}
-        <td class="text-center">{{ "Wzgórza Krzesławickie" }}</td>
+        <td class="text-center tab">{{ "Wzgórza Krzesławickie" }}</td>
         {% elif i[0] == "Czerwony" %}
         <td class="text-center">{{ "Prądnik Czerwony" }}</td>
         {% elif i[0] == "Biały" %}
