--- a/templates/pie_ads_number.html
+++ b/templates/pie_ads_number.html
@@ -66,7 +66,7 @@
         visible: false,
         },
 
-        background: '#000813',
+        background: '#335E62',
 
         tooltip: { enable: true},
 
