--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
 </div>
   <div class="container">
-    <div class="card glass-morph-color" >
+    <div class="card glass-morph" >
   <div class="card-body">
     <form  method="post">
       {{ form.csrf_token }}
