--- a/templates/main_stats.html
+++ b/templates/main_stats.html
@@ -1,10 +1,10 @@
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-3 text-primary d-flex justify-content-center align-items-center font-italic">
-        <h1>Weekly stats</h1>
+        <div class="col-2 text-primary d-flex justify-content-center align-items-center font-italic">
+        <h1>Weekly-</h1>
     </div>
-<div class="card-group col-9 text-primary">
+<div class="card-group col-8 text-primary">
 
 
   <div class="card glass-morph">
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-    <div class="card glass-morph border-right">
+    <div class="card glass-morph">
     <div class="card-body text-center d-flex align-items-center justify-content-center">
       <div class="card-header">
 
@@ -30,7 +30,6 @@
           <h4 class="red">{{ data[3][0] }}%</h4>
           {% endif %}
 
-        <h5 class="gray-font-color">Tydzień/tydzień</h5>
       </div>
     </div>
           </div>
@@ -60,10 +59,13 @@
           <h4 class="red">{{ data[3][1] }}</h4>
           {% endif %}
 
-        <h5 class="gray-font-color">Tydzień/tydzień</h5>
       </div>
     </div>
           </div>
+    </div>
+       <div class="col-2 text-primary d-flex justify-content-center align-items-center font-italic">
+        <h1>-stats</h1>
+
     </div>
     </div>
 </div>
