--- a/templates/bar_avg_price.html
+++ b/templates/bar_avg_price.html
@@ -74,9 +74,9 @@ var chartData = [
               } ,
     },
 
-    background: '#335E62',
+    background: '#0D1714',
 
-    palettes: ["#003566"],
+    palettes: ["#438EA0"],
 
     chartArea: {
             border: {
@@ -97,7 +97,7 @@ var chartData = [
                     {% endif %}
                     height: 10,
                     width: 10,
-                    dataLabel: { visible: true, position: 'Middle', font: {fontWeight: 500, fontFamily: 'Segoe UI', size:'16',color: '#fdfffc'}, },
+                    dataLabel: { visible: true, position: 'Middle', font: {fontWeight: 700, fontFamily: 'Segoe UI', size:'16',color: '#0D1714'}, },
                 }
     }],
 
