--- a/templates/main_stats.html
+++ b/templates/main_stats.html
@@ -1,16 +1,14 @@
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-2 text-primary d-flex justify-content-center align-items-center font-italic">
-        <h1>Weekly-</h1>
-    </div>
-<div class="card-group col-8 text-primary">
+<div class="col-1"></div>
+<div class="card-group col-10 text-primary">
 
 
   <div class="card glass-morph">
     <div class=" card-body text-center d-flex align-items-center justify-content-center">
-      <div class="card-header">
-      <h4>{{ "{:,}".format(data[2][0][0]|int)}} zł </h4>
+      <div class="card-header yellow-triad-color">
+      <h3>{{ "{:,}".format(data[2][0][0]|int)}} zł </h3>
           {% if data[2][0]|length == 3 %}
           <h5 class="gray-font-color"> Średnia cena za m2</h5>
           {% else %}
@@ -33,11 +31,20 @@
       </div>
     </div>
           </div>
+    <div class="card glass-morph">
+    <div class=" card-body text-center d-flex align-items-center justify-content-center">
+      <div class="card-header yellow-triad-color">
+          <div class="text-center text-primary d-flex justify-content-center align-items-center font-italic">
+              <h4>Weekly stats</h4>
+          </div>
+      </div>
+    </div>
+  </div>
           <div class="card glass-morph">
     <div class="card-body text-center d-flex align-items-center justify-content-center">
-      <div class="card-header">
+      <div class="card-header yellow-triad-color">
           {% if data[2][0]|length == 3 %}
-      <h4>{{ data[2][0][2] }}</h4>
+      <h3>{{ data[2][0][2] }}</h3>
      {% else %}
         <h4>{{ data[2][0][1] }}</h4>
      {% endif %}
@@ -63,9 +70,6 @@
     </div>
           </div>
     </div>
-       <div class="col-2 text-primary d-flex justify-content-center align-items-center font-italic">
-        <h1>-stats</h1>
 
-    </div>
     </div>
 </div>
