--- a/templates/bar_avg_price.html
+++ b/templates/bar_avg_price.html
@@ -74,7 +74,7 @@ var chartData = [
               } ,
     },
 
-    background: '#0D1714',
+    background: '#050707',
 
     palettes: ["#438EA0"],
 
