--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
 
     </head>
     <body>
+
+    <div class="header">
+    </div>
         <!-- Your page content -->
         {% block content %}
 
