--- a/templates/pie_ads_number.html
+++ b/templates/pie_ads_number.html
@@ -66,7 +66,7 @@
         visible: false,
         },
 
-        background: '#0D1714',
+        background: '#050707',
 
         tooltip: { enable: true},
 
