--- a/templates/main_stats.html
+++ b/templates/main_stats.html
@@ -35,7 +35,7 @@
     <div class=" card-body text-center d-flex align-items-center justify-content-center">
       <div class="card-header yellow-triad-color">
           <div class="text-center text-primary d-flex justify-content-center align-items-center font-italic">
-              <h4>Weekly stats</h4>
+              <h4>Weekly statistics</h4>
           </div>
       </div>
     </div>
