--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -265,8 +265,77 @@ color: #42929A;
 color: #A19943;
 }
 
+.pink-triad-color{
+color: #A14364;
+}
+h1 {
+font-family: "Raleway", sans-serif;
+  font-style: italic;
+  font-size: 3.5em;
+  letter-spacing: 1px;
+  font-weight: 600;
+  margin:40px auto;
+color: #A14364;
+  transition:.6s;
+}
+h1:before,
+h1:after {
+  content:attr(data-text);
+  transition:.6s;
+}
+h1:before {
+  left: 0;
+  top: 0;
+  position: absolute;
+  z-index:-1;
+  text-shadow:
+   0px 0px,
+   0px 0px,
+   0px 0px,
+   0px 0px,
+   0px 0px,
+   0px 0px,
+   0px 0px,
+   0px 0px,
+   0px 0px,
+   0px 0px;
+  -webkit-mask:repeating-linear-gradient(45deg, transparent 0 3px, rgba(0,0,0,0.5) 0 6px);
+          mask:repeating-linear-gradient(45deg, transparent 0 3px, rgba(0,0,0,0.5) 0 6px);
+}
+h1:hover {
+  transform:translate(-10px,-10px);
+}
+h1:hover:before {
+  text-shadow:
+   1px 1px,
+   2px 2px,
+   3px 3px,
+   4px 4px,
+   5px 5px,
+   6px 6px,
+   7px 7px,
+   8px 8px,
+   9px 9px,
+   10px 10px;
+}
+
+
 .header{
-padding-bottom:7vh;
-background: rgb(67,113,161);
-background: linear-gradient(90deg, rgba(67,113,161,1) 3%, rgba(67,142,161,1) 66%, rgba(67,83,161,1) 95%);
+background: rgb(5,7,7);
+background: radial-gradient(circle, rgba(5,7,7,1) 76%, rgba(40,47,47,1) 100%, rgba(70,93,93,1) 100%);
+}
+
+.header-border{
+border-bottom: 1px solid rgb(67,113,161);
+padding-top: 7vh;
+margin-left: 30%;
+margin-right: 30%;
+}
+
+h2, h4, h5 {
+font-family: "Raleway", sans-serif;
+}
+
+h3 {
+font-weight: 650;
 }
