--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,10 @@
         {% block styles %}
             <link rel="stylesheet" href="static/css/bootstrap.css">
             <link rel="stylesheet" href="static/css/styles.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+                  rel="stylesheet">
 
         {% endblock %}
 
@@ -19,8 +23,8 @@
 
     </head>
     <body>
-
     <div class="header">
+        <div class="header-border"></div>
     </div>
         <!-- Your page content -->
         {% block content %}
