--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,13 @@
 
 {% block content %}
 
-<div class="all-page">
-<div class="container">
+<div class="all-page pt-5">
+<div class="container pt-5">
   <header>
       <div class="row">
-          <div class="col-9">
-      {% if request.path  == '/warszawa' %}
-<a href="{{url_for('index')}}" class="btn btn-lg btn-outline-success border-top-0 rounded-1 top-button-city mb-4 btn-top-height-gg">Kraków</a>
-       <a href="{{url_for('warszawa')}}" class="btn btn-lg btn-success border-top-0 rounded-1 top-button-city mb-4 btn-top-height-gg">Warszawa</a>
-      {% else %}
-      <a href="{{url_for('index')}}" class="btn btn-lg btn-success border-top-0 rounded-1 top-button-city mb-4 btn-top-height-gg">Kraków</a>
-       <a href="{{url_for('warszawa')}}" class="btn btn-lg btn-outline-success border-top-0 rounded-1 top-button-city mb-4 btn-top-height-gg">Warszawa</a>
-      {% endif %}
+          <div class="col-1"></div>
+          <div class="col-8">
+              <h1 data-text="Kraków mieszkania"></h1>
               </div>
       <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <dotlottie-player src="https://lottie.host/7ffeb1fa-b8e9-40ba-b346-d86d24b755bc/sy9z4PL7U4.json" background="transparent" speed="1" style="width: 300px; height: 100px; float:right;" loop autoplay></dotlottie-player>
