--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,19 @@
 {% block content %}
 
 <div class="all-page pt-5">
-<div class="container pt-5">
+
+<div class="container">
   <header>
-      <div class="row">
-          <div class="col-1"></div>
-          <div class="col-8">
-              <h1 data-text="Kraków mieszkania"></h1>
+      <div class="row ml-5">
+          <div class="col-1">
+              <h1 class="roar">Kraków</h1></div>
+          <div class="col-5 more-padding">
+              <h1>Mieszkania</h1>
               </div>
+          <div class="col-6 mt-5">
       <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <dotlottie-player src="https://lottie.host/7ffeb1fa-b8e9-40ba-b346-d86d24b755bc/sy9z4PL7U4.json" background="transparent" speed="1" style="width: 300px; height: 100px; float:right;" loop autoplay></dotlottie-player>
-  </div>
+  </div</div>>
   </header>
 
 </div>
