--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
 
         {% block scripts %}
             <!-- Optional JavaScript -->
-        {% endblock %}\
+        {% endblock %}
     <script src="static/js/scripts.js"></script>
     </body>
 
