--- a/templates/bar_avg_price.html
+++ b/templates/bar_avg_price.html
@@ -1,5 +1,7 @@
 
-    {% if house == True %}
+    {% if (house == True) and (warszawa == True) %}
+    <div class="bar-avg-price" id="container" style="width:570px; height:850px;"></div>
+    {% elif (house == True) %}
     <div class="bar-avg-price" id="container" style="width:570px; height:700px;"></div>
     {% else %}
     <div class="bar-avg-price " id="container" style="width:570px;"></div>
