--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,6 @@
 {% block content %}
 
 <div class="all-page pt-5">
-
 <div class="container">
   <header>
       <div class="row ml-5">
@@ -16,10 +15,10 @@
           <div class="col-6 mt-5">
       <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <dotlottie-player src="https://lottie.host/7ffeb1fa-b8e9-40ba-b346-d86d24b755bc/sy9z4PL7U4.json" background="transparent" speed="1" style="width: 300px; height: 100px; float:right;" loop autoplay></dotlottie-player>
-  </div</div>>
+  </div></div>
   </header>
-
 </div>
+
   <div class="container">
     <div class="card glass-morph" >
   <div class="card-body">
@@ -68,7 +67,7 @@
       {{ form.submit(class="btn btn-success btn-md ml-5") }}
         </div>
         <div class="col-1-25">
-        <a href="{{url_for('index')}}" class="btn btn-outline-primary ml-5" id="reset-page-form">Reset</a>
+        <a href="{{url_for('krakow')}}" class="btn btn-outline-primary ml-5" id="reset-page-form">Reset</a>
         </div></div>
         </form>
 
@@ -94,8 +93,7 @@
     <div class="container mt-5 pb-5 text-primary">
     <h4>@2024</h4>
     </div>
-</div>
-
+    </div>
 
 
 
