--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
         {% block styles %}
-            <link rel="stylesheet" href="static/css/bootstrap.css">
-            <link rel="stylesheet" href="static/css/styles.css">
+            <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.css')}}">
+            <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
@@ -51,7 +51,7 @@
         {% block scripts %}
             <!-- Optional JavaScript -->
         {% endblock %}
-    <script src="static/js/scripts.js"></script>
+    <script src="{{url_for('static', filename='js/scripts.js')}}"></script>
     </body>
 
 
