--- a/templates/pie_ads_number.html
+++ b/templates/pie_ads_number.html
@@ -1,6 +1,8 @@
 
 
-    {% if house == True %}
+    {% if (house == True) and (warszawa == True) %}
+    <div id="container1" style="width:570px; margin-top: 175px;"></div>
+    {% elif (house == True) %}
     <div id="container1" style="width:570px; margin-top: 100px;"></div>
     {% else %}
     <div id="container1" style="width:570px;"></div>
